# mlflow

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  pyproject.toml
mlflow/apps/: BaseDashApp.py  basic_app.py  timeseries.py
mlflow/models/: model_training.py  model_utils.py  models_definition.py
mlflow/models/frameworks/: framework_pipeline.py  frameworks_definition.py
